# mcp-stolperstein

./: .env.example  .gitignore  .wiki-compiler.json  CLAUDE.md  Dockerfile  README.md  USING.md  compose.yaml  komodo.toml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
.hypothesis/constants/: 012fe2cedac6c6b7  0b2c5b0c10d1d3df  0c08314294e05c95  35b29337d678f94e  46ceb41ba775bf87  69784040e01bb421  903d0ea5eebdde72  9b30fbc99af70161  aa609d3d2aff5e02  d1ceb7724875c6a8  da39a3ee5e6b4b0d
docs/: cq-extensions.md
docs/wiki/: .compile-state.json  INDEX.md  log.md  schema.md
docs/wiki/concepts/: conform-plus-extend.md  provenance-and-did-identity.md
docs/wiki/topics/: claude-code-integration.md  cq-interop-and-schema.md  knowledge-lifecycle.md  org-layer-foundations.md  project-overview.md
openspec/: config.yaml
openspec/changes/archive/2026-07-07-adopt-cq-extensions-slot/: design.md  proposal.md  tasks.md  upstream-comment-draft.md
openspec/changes/archive/2026-07-11-rename-product-name/: proposal.md
openspec/changes/cq-v1-alignment-and-hooks/: design.md  proposal.md  tasks.md  upstream-issue-draft.md
openspec/changes/rename-product-name/: design.md  tasks.md
openspec/changes/stolperstein-mvp-scaffold/: design.md  proposal.md  tasks.md
openspec/specs/cq-interop/: spec.md
plugin/: hooks.json
plugin/skills/stolperstein-reflect/: SKILL.md
plugin/stolperfalle/: SKILL.md
plugin/stolperfalle/.claude-plugin/: plugin.json
plugin/stolperfalle/hooks/: hooks.json
plugin/stolperfalle/hooks/handlers/: __init__.py  _client.py  _common.py  _debug.py  _inject.py  _rate_limit.py  _signals.py  (+4 more)
plugin/stolperstein/: SKILL.md
plugin/stolperstein/.claude-plugin/: plugin.json
plugin/stolperstein/hooks/: hooks.json
src/stolperfalle/: __init__.py  __main__.py  auth.py  confidence.py  config.py  embeddings.py  emergent.py  models.py  provenance.py  reflect.py  server.py  store.py
src/stolperfalle/migrations/: __init__.py  m0001_ku_id_format_fix.py  m0004_provenance_and_org.py  m0006_emergent_scaffolding.py
src/stolperstein/: __init__.py  __main__.py  auth.py  confidence.py  config.py  embeddings.py  emergent.py  models.py  provenance.py  reflect.py  sanitize.py  server.py  store.py
src/stolperstein/migrations/: __init__.py  m0002_cq_conformance_rename.py  m0003_stolperstein_extensions.py  m0004_provenance_and_org.py  m0005_gap_signal_rename.py
src/stolperstein/sync/: cq_team.py  siyuan.py
tests/: conftest.py  test_auth.py  test_confidence.py  test_config.py  test_cq_schema.py  test_emergent.py  test_hook_endpoints.py  test_hooks.py  test_migrations.py  test_provenance.py  test_reflect.py  test_store.py  test_sync.py  test_tools.py
tests/fixtures/cq/: CQ_SCHEMA_REF.md
(+29 files in other folders)
