[project]
name = "mcp-stolperstein"
version = "0.1.0"
description = "Experiential knowledge capture and recall MCP server for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Casey Romkes" }]
dependencies = [
    "fastmcp>=3.4.2,<4.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.12.0",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0.0",
    # Security floors (transitive deps of fastmcp; pinned to address CVEs)
    "authlib>=1.7.0",            # GHSA: CSRF in token cache handling
    "python-multipart>=0.0.27",  # GHSA: DoS via unbounded multipart headers
]

[project.scripts]
mcp-stolperstein = "stolperstein.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stolperstein"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "hypothesis>=6.155.1",
    "ruff>=0.15.15",
    "mypy>=1.10",
    "jsonschema>=4.23",
]
