[project]
name = "mcp-stolperfalle"
version = "0.1.0"
description = "Experiential knowledge capture and recall MCP server for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Casey Romkes" }]
dependencies = [
    "fastmcp>=3.4.3,<4.0.0",  # 3.4.3+: allowed_hosts kwarg (Host-header guard)
    "httpx>=0.28.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.12.0",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0.0",
    "torch>=2.12.1",  # direct dep so tool.uv.sources can pin the linux CPU index
    # Security floors (transitive deps of fastmcp; pinned to address CVEs)
    "authlib>=1.7.0",            # GHSA: CSRF in token cache handling
    "python-multipart>=0.0.27",  # GHSA: DoS via unbounded multipart headers
]

[project.scripts]
mcp-stolperfalle = "stolperfalle.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stolperfalle"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "hypothesis>=6.156.6",
    "ruff>=0.15.21",
    "mypy>=2.2.0",
    "jsonschema>=4.23",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# nebula-1 is a CPU-only VM: lock CPU torch wheels for linux so the Docker
# build installs from the lockfile without pulling ~5 GB of nvidia-cuda-*.
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
